--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.13.1",
     "react-google-button": "^0.7.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
